# mcp-language-server

.claude/: settings.local.json
mcp-language-server-port/: .claude_include  Cargo.toml  LICENSE  README.md
mcp-language-server-port/.claude/: settings.local.json
mcp-language-server-port/src/: lib.rs  main.rs
mcp-language-server-port/src/logging/: mod.rs
mcp-language-server-port/src/lsp/: client.rs  mod.rs  protocol.rs  transport.rs
mcp-language-server-port/src/mcp/: mod.rs
mcp-language-server-port/src/tools/: definition.rs  diagnostics.rs  edit.rs  hover.rs  mod.rs  references.rs  rename.rs  utils.rs
mcp-language-server-port/src/watcher/: gitignore.rs  mod.rs
mcp-language-server-port/tests/: TESTING.md  advanced_watcher_test.rs  client_init_test.rs  common.rs  definition_test.rs  file_operations_test.rs  full_integration_test.rs  hover_test.rs  lsp_features_test.rs  mcp_integration_test.rs  mock_lsp_server.rs  references_test.rs  rename_test.rs  watcher_test.rs
mcp-language-server-port/tests/fixtures/: sample.rs
mcp-language-server-port/tests/integration/: README.md
